--- a/Readme
+++ b/Readme
@@ -1,10 +1,4 @@
 - 👋 hi I’m @KomalChauhaun
 - 👀 I’m interested in learning new skills...
-- 🌱 I’m currently learning computer languages
-- 💞️ I’m looking to collaborate on ...
+- 🌱 I’m currently a beginner...
 - 📫 How to reach me ...komalchauhan28816@gmail.com
-
-<!---
-KomalChauhaun/KomalChauhaun is a ✨ special ✨ repository because its `README.md` (this file) appears on your GitHub profile.
-You can click the Preview link to take a look at your changes.
---->
